# stingray-rt

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  README.md  build.bat  build.sh  compile_vk_shaders.bat
Resources/Shaders/Vulkan/includes/: material.glsl
Resources/Win32/: app.manifest
ResourcesTEMP/Models/thin_plane/: thin_plane.gltf
ResourcesTEMP/Shaders/Vulkan/: rt_closest_hit.rchit  ui.frag
ResourcesTEMP/Shaders/Vulkan/includes/: ray_payload.glsl  ray_tracing_math.glsl
Source/: main.cpp
Source/Core/: EnumFlags.h  FrameInfo.h  Platform.h  Window.h  WindowWin32.cpp
Source/Data/: Camera.cpp  Camera.h  Font.cpp  Font.h  Model.h  Scene.cpp  Scene.h
Source/ECS/: Components.h  ECS.cpp  ECS.h
Source/Graphics/: GraphicsDevice.h  GraphicsTypes.h  RenderGraph.cpp  RenderGraph.h
Source/Graphics/Renderpasses/: FullscreenTriPass.cpp  FullscreenTriPass.h  RayTracingPass.cpp  RayTracingPass.h  UIPass.cpp  UIPass.h
Source/Graphics/Vulkan/: GraphicsDeviceVulkan.cpp  GraphicsDeviceVulkan.h  GraphicsTypesVulkan.h
Source/Input/: Input.cpp  Input.h
Source/Managers/: AssetManager.cpp  AssetManager.h  MaterialManager.cpp  MaterialManager.h
Source/Math/: SRMath.h
Source/UI/: UIContext.h
resources/Win32/: Resources.rc
resources/models/: dual_cube.gltf
resources/models/lucy/: lucy.gltf
resources/models/sponza/: Sponza.gltf
resources/shaders/vulkan/: fullscreen_tri.frag  fullscreen_tri.vert  gbuffer.frag  gbuffer.vert  lighting.frag  rt_closest_hit.rchit  rt_closesthit.rchit  rt_miss.rmiss  rt_raygen.rgen  ui.frag  ui.vert
resources/shaders/vulkan/includes/: bindless.glsl  geometry_types.glsl  material.glsl  ray_payload.glsl  ray_tracing_math.glsl
shaders/gl/: hello.frag.glsl  hello.vert.glsl
shaders/vulkan/: bindless.glsl  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  hello.vert  hello.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  lighting.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
src/: editor.cpp  editor.h  enum_flags.h  frame_info.h  main.cpp  platform.h
src/data/: camera.cpp  camera.h  font.cpp  font.h  model.h  scene.cpp  scene.h
src/ecs/: components.h  ecs.cpp  ecs.h
src/graphics/: gfx_device.h  gfx_types.h  render_graph.cpp  render_graph.h  renderer_3d.cpp  renderer_3d.h
src/graphics/gl/: gfx_device_gl.cpp  gfx_device_gl.h
src/graphics/renderpasses/: fullscreen_tri_pass.cpp  fullscreen_tri_pass.h  gbuffer_pass.cpp  gbuffer_pass.h  lighting_pass.cpp  lighting_pass.h  ray_tracing_pass.cpp  ray_tracing_pass.h  ui_pass.cpp  ui_pass.h
src/graphics/vulkan/: gfx_device_vulkan.cpp  gfx_device_vulkan.h  gfx_types_vulkan.h
src/input/: input.cpp  input.h
src/managers/: asset_manager.cpp  asset_manager.h  material_manager.cpp  material_manager.h
